--- a/index.html
+++ b/index.html
@@ -179,7 +179,9 @@
       <div class="container">
         <a class="logo-footer-a" href="./index.html">Web<span class="logo-style-studio-footer">Studio</span></a>
         <p class="footer-p">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-        <h3 class="footer-h-icons">Social media</h3>
+        <div>
+          <p class="footer-p-icons">Social media</p>
+        </div>
       </div>
     </footer>
 
