--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
         <div class="div-two-paragraf">
           <div class="div-soc-media">
-            <p>Social media</p>
+            <p class="soc-media-p">Social media</p>
           </div>
           <div class="div-icons-footer">
             <ul class="icon-ul-footer">
