--- a/index.html
+++ b/index.html
@@ -189,6 +189,27 @@
             <ul class="icon-ul-footer">
               <li class="icon-li-footer">
                 <a href="" class="icon-a-footer">
+                  <svg width="24" height="24" class="icon-svg-footer">
+                    <use href="./images/icons.svg#instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="icon-li-footer">
+                <a href="" class="icon-a-footer">
+                  <svg width="24" height="24" class="icon-svg-footer">
+                    <use href="./images/icons.svg#twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="icon-li-footer">
+                <a href="" class="icon-a-footer">
+                  <svg width="24" height="24" class="icon-svg-footer">
+                    <use href="./images/icons.svg#facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="icon-li-footer">
+                <a >
                   <svg class="icon-svg-footer">
                     <use></use>
                   </svg>
@@ -196,22 +217,8 @@
               </li>
               <li class="icon-li-footer">
                 <a href="" class="icon-a-footer">
-                  <svg class="icon-svg-footer">
-                    <use></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="icon-li-footer">
-                <a href="" class="icon-a-footer">
-                  <svg class="icon-svg-footer">
-                    <use></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="icon-li-footer">
-                <a href="" class="icon-a-footer">
-                  <svg class="icon-svg-footer">
-                    <use></use>
+                  <svg width="24" height="24" class="icon-svg-footer">
+                    <use href="./images/icons.svg#in"></use>
                   </svg>
                 </a>
               </li>
