--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a class="logo-header" href="./index.html">Web<span class="logo-style-studio">Studio</span></a>
       
         <ul class="nav-list-header">
-          <li class="nav-item">
+          <li class="nav-item-studio">
             <a class="nav-item-link" href="./index.html">Studio</a>
           </li>
           <li class="nav-item">
