--- a/index.html
+++ b/index.html
@@ -68,16 +68,28 @@
         <div class="container">
           <h2 class="h-two visually-hidden">Feature</h2>
           
-                 <ul class="section-dva">
-          <li class="item-li-dwa"><h3 class="zgldva">Strategy</h3><p class="paragraf">Our goal is to identify the business
-          problem to walk away with the perfect and creative solution.</p></li>
-          <li class="item-li-dwa"><h3 class="zgldva">Punctuality</h3>
-          <p class="paragraf">Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
-          <li class="item-li-dwa"><h3 class="zgldva">Diligence</h3>
-          <p class="paragraf">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p></li>
-          <li class="item-li-dwa"><h3 class="zgldva">Technologies</h3>
-          <p class="paragraf">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
-                 </ul>
+          <ul class="section-dva">
+           <li class="item-li-dwa"><div class="container-h-two-icons">
+            <svg width="64" heigth="64">
+             <use href="./images/symbol-defs.svg#antenna"></use>
+           </svg></div><h3 class="zgldva">Strategy</h3><p class="paragraf">Our goal is to identify the business
+              problem to walk away with the perfect and creative solution.</p></li>
+           <li class="item-li-dwa"><div class="container-h-two-icons">
+            <svg width="64" heigth="64" >
+             <use href="./images/symbol-defs.svg#clock"></use>
+           </svg></div><h3 class="zgldva">Punctuality</h3>
+             <p class="paragraf">Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
+           <li class="item-li-dwa"><div class="container-h-two-icons">
+            <svg width="64" heigth="64" >
+             <use href="./images/symbol-defs.svg#diagram"></use>
+           </svg></div><h3 class="zgldva">Diligence</h3>
+             <p class="paragraf">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p></li>
+           <li class="item-li-dwa"><div class="container-h-two-icons">
+            <svg width="64" heigth="64" >
+             <use href="./images/symbol-defs.svg#astronaut"></use>
+           </svg></div><h3 class="zgldva">Technologies</h3>
+             <p class="paragraf">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
+          </ul>
         </div>
       </section>
 
