--- a/index.html
+++ b/index.html
@@ -97,41 +97,43 @@
       <section class="section-tree-full">
         <div class="container">
           <h2 class="section-tree-h_two">Our Team</h2>
-          <ul class="section-tree-ul">
+          <div class="div-tree-ul">
+            <ul class="section-tree-ul">
+                <li class="section-li">
+                  <img src="./images/mark-guerrero.jpg" alt="Mark Guerrero avatar" width="264" height="260"
+                  />
+                  <div class="sec-tree-div">
+                    <h3 class="section-tree-h_tree">Mark Guerrero</h3>
+                    <p class="section-tree-p">Product Designer</p>
+                  </div>
+                </li>
               <li class="section-li">
-                <img src="./images/mark-guerrero.jpg" alt="Mark Guerrero avatar" width="264" height="260"
+                <img src="./images/tom-ford.jpg" alt="Tom Ford avatar" width="264" height="260"
                 />
                 <div class="sec-tree-div">
-                  <h3 class="section-tree-h_tree">Mark Guerrero</h3>
-                  <p class="section-tree-p">Product Designer</p>
+                  <h3 class="section-tree-h_tree">Tom Ford</h3>
+                  <p class="section-tree-p">Frontend Developer</p>
                 </div>
               </li>
-            <li class="section-li">
-              <img src="./images/tom-ford.jpg" alt="Tom Ford avatar" width="264" height="260"
-              />
-              <div class="sec-tree-div">
-                <h3 class="section-tree-h_tree">Tom Ford</h3>
-                <p class="section-tree-p">Frontend Developer</p>
-              </div>
-            </li>
-            <li class="section-li">
-              <img src="./images/camila-garcia.jpg" alt="Camila Garcia avatar" width="264" height="260"
-              />
-              <div class="sec-tree-div">
-                <h3 class="section-tree-h_tree">Camila Garcia</h3>
-                <p class="section-tree-p">Marketing</p>
-              </div>
-            </li>
-            <li class="section-li">
-          
-              <img src="./images/daniel-wilson.jpg" alt="Daniel Wilson avatar" width="264" height="260"
-              />
-              <div class="sec-tree-div">
-                <h3 class="section-tree-h_tree">Daniel Wilson</h3>
-                <p class="section-tree-p">UI Designer</p>
-              </div>
-            </li>
-          </ul>
+              <li class="section-li">
+                <img src="./images/camila-garcia.jpg" alt="Camila Garcia avatar" width="264" height="260"
+                />
+                <div class="sec-tree-div">
+                  <h3 class="section-tree-h_tree">Camila Garcia</h3>
+                  <p class="section-tree-p">Marketing</p>
+                </div>
+              </li>
+              <li class="section-li">
+            
+                <img src="./images/daniel-wilson.jpg" alt="Daniel Wilson avatar" width="264" height="260"
+                />
+                <div class="sec-tree-div">
+                  <h3 class="section-tree-h_tree">Daniel Wilson</h3>
+                  <p class="section-tree-p">UI Designer</p>
+                </div>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
       <!--======= Section 4 =======-->
