--- a/index.html
+++ b/index.html
@@ -104,6 +104,24 @@
                   <div class="sec-tree-div">
                     <h3 class="section-tree-h_tree">Mark Guerrero</h3>
                     <p class="section-tree-p">Product Designer</p>
+                    <ul class="ul-soc">
+                      <li class="li-soc"><a class="a-soc" href="">
+                        <svg class="svg-soc" width="16" height="16">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg></a></li>
+                      <li class="li-soc"><a class="a-soc" href="">
+                        <svg class="svg-soc" width="16" height="16">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg></a></li>
+                      <li class="li-soc"><a class="a-soc" href="">
+                        <svg class="svg-soc" width="16" height="16">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg></a></li>
+                      <li class="li-soc"><a class="a-soc" href="">
+                        <svg class="svg-soc" width="16" height="16">
+                        <use href="./images/icons.svg#in"></use>
+                      </svg></a></li>
+                    </ul>
                   </div>
                 </li>
               <li class="section-li">
