--- a/index.html
+++ b/index.html
@@ -130,6 +130,24 @@
                 <div class="sec-tree-div">
                   <h3 class="section-tree-h_tree">Tom Ford</h3>
                   <p class="section-tree-p">Frontend Developer</p>
+                  <ul class="ul-soc">
+                    <li class="li-soc"><a class="a-soc" href="">
+                        <svg class="svg-soc" width="16" height="16">
+                          <use href="./images/icons.svg#instagram"></use>
+                        </svg></a></li>
+                    <li class="li-soc"><a class="a-soc" href="">
+                        <svg class="svg-soc" width="16" height="16">
+                          <use href="./images/icons.svg#twitter"></use>
+                        </svg></a></li>
+                    <li class="li-soc"><a class="a-soc" href="">
+                        <svg class="svg-soc" width="16" height="16">
+                          <use href="./images/icons.svg#facebook"></use>
+                        </svg></a></li>
+                    <li class="li-soc"><a class="a-soc" href="">
+                        <svg class="svg-soc" width="16" height="16">
+                          <use href="./images/icons.svg#in"></use>
+                        </svg></a></li>
+                  </ul>
                 </div>
               </li>
               <li class="section-li">
@@ -138,6 +156,24 @@
                 <div class="sec-tree-div">
                   <h3 class="section-tree-h_tree">Camila Garcia</h3>
                   <p class="section-tree-p">Marketing</p>
+                  <ul class="ul-soc">
+                    <li class="li-soc"><a class="a-soc" href="">
+                        <svg class="svg-soc" width="16" height="16">
+                          <use href="./images/icons.svg#instagram"></use>
+                        </svg></a></li>
+                    <li class="li-soc"><a class="a-soc" href="">
+                        <svg class="svg-soc" width="16" height="16">
+                          <use href="./images/icons.svg#twitter"></use>
+                        </svg></a></li>
+                    <li class="li-soc"><a class="a-soc" href="">
+                        <svg class="svg-soc" width="16" height="16">
+                          <use href="./images/icons.svg#facebook"></use>
+                        </svg></a></li>
+                    <li class="li-soc"><a class="a-soc" href="">
+                        <svg class="svg-soc" width="16" height="16">
+                          <use href="./images/icons.svg#in"></use>
+                        </svg></a></li>
+                  </ul>
                 </div>
               </li>
               <li class="section-li">
@@ -147,6 +183,24 @@
                 <div class="sec-tree-div">
                   <h3 class="section-tree-h_tree">Daniel Wilson</h3>
                   <p class="section-tree-p">UI Designer</p>
+                  <ul class="ul-soc">
+                    <li class="li-soc"><a class="a-soc" href="">
+                        <svg class="svg-soc" width="16" height="16">
+                          <use href="./images/icons.svg#instagram"></use>
+                        </svg></a></li>
+                    <li class="li-soc"><a class="a-soc" href="">
+                        <svg class="svg-soc" width="16" height="16">
+                          <use href="./images/icons.svg#twitter"></use>
+                        </svg></a></li>
+                    <li class="li-soc"><a class="a-soc" href="">
+                        <svg class="svg-soc" width="16" height="16">
+                          <use href="./images/icons.svg#facebook"></use>
+                        </svg></a></li>
+                    <li class="li-soc"><a class="a-soc" href="">
+                        <svg class="svg-soc" width="16" height="16">
+                          <use href="./images/icons.svg#in"></use>
+                        </svg></a></li>
+                  </ul>
                 </div>
               </li>
             </ul>
