--- a/index.html
+++ b/index.html
@@ -212,7 +212,13 @@
           <h2 class="section-four-h_two">Our Portfolio</h2>
           <ul class="section-four-ul">
             <li class="section-four-li">
-              <img src="./images/banking-app.jpg" alt="Banking App" width="360" height="300" />
+              <a href="#" class="cont-img-a">
+                <div class="container-img">
+                  <img src="./images/banking-app.jpg" alt="Banking App" width="360" height="300" />
+                  <p class="sec-four-cont-p">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                  Cloud Storage App</p>
+                </div>
+              </a>
               <div class="cont-div-four">
                 <h3 class="section-four-h_tree">Banking App</h3>
                 <p class="section-four-p">App</p>
