--- a/index.html
+++ b/index.html
@@ -212,53 +212,88 @@
           <h2 class="section-four-h_two">Our Portfolio</h2>
           <ul class="section-four-ul">
             <li class="section-four-li">
-              <div class="container-img">
-                <img src="./images/banking-app.jpg" alt="Banking App" width="360" height="300" />
-                <p class="sec-four-cont-p">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
-                  Exotic Fruit Ecommerce App ·
-                  Cloud Storage App</p>
-                <div class="cont-div-four">
-                  <h3 class="section-four-h_tree">Banking App</h3>
-                  <p class="section-four-p">App</p>
+              <a href="#" class="cont-img-a">
+                <div class="container-img">
+                  <img src="./images/banking-app.jpg" alt="Banking App" width="360" height="300" />
+                  <p class="sec-four-cont-p">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                    Exotic Fruit Ecommerce App ·
+                    Cloud Storage App</p>
+                  <div class="cont-div-four">
+                    <h3 class="section-four-h_tree">Banking App</h3>
+                    <p class="section-four-p">App</p>
+                  </div>
                 </div>
-                <p class="sec-four-cont-p">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
-                Cloud Storage App</p>
-              </div>
+              </a>
             </li>
             <li class="section-four-li">
-              <img src="./images/cashless-payment.jpg" alt="Cashless Payment" width="360" height="300" />
-              <div class="cont-div-four">
-                <h3 class="section-four-h_tree">Cashless Payment</h3>
-                <p class="section-four-p">Marketing</p>
-              </div>
+              <a href="" class="cont-img-a">
+                <div class="container-img">
+                  <img src="./images/cashless-payment.jpg" alt="Cashless Payment" width="360" height="300" />
+                  <p class="sec-four-cont-p">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                    Exotic Fruit Ecommerce App ·
+                    Cloud Storage App</p>
+                  <div class="cont-div-four">
+                    <h3 class="section-four-h_tree">Cashless Payment</h3>
+                    <p class="section-four-p">Marketing</p>
+                  </div>
+                </div>
+              </a>
             </li>
             <li class="section-four-li">
-              <img src="./images/meditation-app.jpg" alt="Meditation App" width="360" height="300" />
-              <div class="cont-div-four">
-                <h3 class="section-four-h_tree">Meditation App</h3>
-                <p class="section-four-p">App</p>
-              </div>
+              <a href="" class="cont-img-a">
+                <div class="container-img">
+                  <img src="./images/meditation-app.jpg" alt="Meditation App" width="360" height="300" />
+                  <p class="sec-four-cont-p">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                    Exotic Fruit Ecommerce App ·
+                    Cloud Storage App</p>
+                  <div class="cont-div-four">
+                    <h3 class="section-four-h_tree">Meditation App</h3>
+                    <p class="section-four-p">App</p>
+                  </div>
+                </div>
+              </a>
             </li>
             <li class="section-four-li">
-              <img src="./images/taxi-service.jpg" alt="Taxi Service" width="360" height="300" />
-              <div class="cont-div-four">
-                <h3 class="section-four-h_tree">Taxi Service</h3>
-                <p class="section-four-p">Marketing</p>
-              </div>
+              <a href="" class="cont-img-a">
+                <div class="container-img">
+                  <img src="./images/taxi-service.jpg" alt="Taxi Service" width="360" height="300" />
+                  <p class="sec-four-cont-p">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                    Exotic Fruit Ecommerce App ·
+                    Cloud Storage App</p>
+                  <div class="cont-div-four">
+                    <h3 class="section-four-h_tree">Taxi Service</h3>
+                    <p class="section-four-p">Marketing</p>
+                  </div>
+                </div>
+              </a>
             </li>
             <li class="section-four-li">
-              <img src="./images/screen-illustratios.jpg" alt="Screen Illustrations" width="360" height="300" />
-              <div class="cont-div-four">
-                <h3 class="section-four-h_tree">Screen Illustrations</h3>
-                <p class="section-four-p">Design</p>
-              </div>
+              <a href="" class="cont-img-a">
+                <div class="container-img">
+                  <img src="./images/screen-illustratios.jpg" alt="Screen Illustrations" width="360" height="300" />
+                  <p class="sec-four-cont-p">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                    Exotic Fruit Ecommerce App ·
+                    Cloud Storage App</p>
+                  <div class="cont-div-four">
+                    <h3 class="section-four-h_tree">Screen Illustrations</h3>
+                    <p class="section-four-p">Design</p>
+                  </div>
+                </div>
+              </a>
             </li>
             <li class="section-four-li">
-              <img src="./images/online-courses.jpg" alt="Online Courses" width="360" height="300" />
-              <div class="cont-div-four">
-                <h3 class="section-four-h_tree">Online Courses</h3>
-                <p class="section-four-p">Marketing</p>
-              </div>
+              <a href="" class="cont-img-a">
+                <div class="container-img">
+                  <img src="./images/online-courses.jpg" alt="Online Courses" width="360" height="300" />
+                  <p class="sec-four-cont-p">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                    Exotic Fruit Ecommerce App ·
+                    Cloud Storage App</p>
+                  <div class="cont-div-four">
+                    <h3 class="section-four-h_tree">Online Courses</h3>
+                    <p class="section-four-p">Marketing</p>
+                  </div>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
