--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       </section>
 
       <!--======= Section 3 =======-->
-      <section class="our-team section">
+      <section class="our-team">
         <div class="container">
           <h2 class="section-tree-h_two">Our Team</h2>
             <ul class="section-tree-ul">
