--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
             <a class="nav-item-link" href="./index.html">Studio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-item-link" href="">Portfolio</a>
+            <a class="nav-item-link" href="#">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-item-link" href="">Contacts</a>
+            <a class="nav-item-link" href="#">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -96,7 +96,7 @@
       <!--======= Section 3 =======-->
       <section class="our-team">
         <div class="container">
-          <h2 class="section-tree-h_two">Our Team</h2>
+            <h2 class="section-tree-h_two">Our Team</h2>
             <ul class="section-tree-ul">
                 <li class="section-li">
                   <img src="./images/mark-guerrero.jpg" alt="Mark Guerrero avatar" width="264" height="260"
@@ -105,19 +105,19 @@
                     <h3 class="section-tree-h_tree">Mark Guerrero</h3>
                     <p class="section-tree-p">Product Designer</p>
                     <ul class="ul-soc">
-                      <li class="li-soc"><a class="a-soc" href="">
+                      <li class="li-soc"><a class="a-soc" href="#">
                         <svg class="svg-soc" width="16" height="16">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg></a></li>
-                      <li class="li-soc"><a class="a-soc" href="">
+                      <li class="li-soc"><a class="a-soc" href="#">
                         <svg class="svg-soc" width="16" height="16">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg></a></li>
-                      <li class="li-soc"><a class="a-soc" href="">
+                      <li class="li-soc"><a class="a-soc" href="#">
                         <svg class="svg-soc" width="16" height="16">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg></a></li>
-                      <li class="li-soc"><a class="a-soc" href="">
+                      <li class="li-soc"><a class="a-soc" href="#">
                         <svg class="svg-soc" width="16" height="16">
                         <use href="./images/icons.svg#in"></use>
                       </svg></a></li>
@@ -131,19 +131,19 @@
                   <h3 class="section-tree-h_tree">Tom Ford</h3>
                   <p class="section-tree-p">Frontend Developer</p>
                   <ul class="ul-soc">
-                    <li class="li-soc"><a class="a-soc" href="">
+                    <li class="li-soc"><a class="a-soc" href="#">
                         <svg class="svg-soc" width="16" height="16">
                           <use href="./images/icons.svg#instagram"></use>
                         </svg></a></li>
-                    <li class="li-soc"><a class="a-soc" href="">
+                    <li class="li-soc"><a class="a-soc" href="#">
                         <svg class="svg-soc" width="16" height="16">
                           <use href="./images/icons.svg#twitter"></use>
                         </svg></a></li>
-                    <li class="li-soc"><a class="a-soc" href="">
+                    <li class="li-soc"><a class="a-soc" href="#">
                         <svg class="svg-soc" width="16" height="16">
                           <use href="./images/icons.svg#facebook"></use>
                         </svg></a></li>
-                    <li class="li-soc"><a class="a-soc" href="">
+                    <li class="li-soc"><a class="a-soc" href="#">
                         <svg class="svg-soc" width="16" height="16">
                           <use href="./images/icons.svg#in"></use>
                         </svg></a></li>
@@ -157,19 +157,19 @@
                   <h3 class="section-tree-h_tree">Camila Garcia</h3>
                   <p class="section-tree-p">Marketing</p>
                   <ul class="ul-soc">
-                    <li class="li-soc"><a class="a-soc" href="">
+                    <li class="li-soc"><a class="a-soc" href="#">
                         <svg class="svg-soc" width="16" height="16">
                           <use href="./images/icons.svg#instagram"></use>
                         </svg></a></li>
-                    <li class="li-soc"><a class="a-soc" href="">
+                    <li class="li-soc"><a class="a-soc" href="#">
                         <svg class="svg-soc" width="16" height="16">
                           <use href="./images/icons.svg#twitter"></use>
                         </svg></a></li>
-                    <li class="li-soc"><a class="a-soc" href="">
+                    <li class="li-soc"><a class="a-soc" href="#">
                         <svg class="svg-soc" width="16" height="16">
                           <use href="./images/icons.svg#facebook"></use>
                         </svg></a></li>
-                    <li class="li-soc"><a class="a-soc" href="">
+                    <li class="li-soc"><a class="a-soc" href="#">
                         <svg class="svg-soc" width="16" height="16">
                           <use href="./images/icons.svg#in"></use>
                         </svg></a></li>
@@ -184,19 +184,19 @@
                   <h3 class="section-tree-h_tree">Daniel Wilson</h3>
                   <p class="section-tree-p">UI Designer</p>
                   <ul class="ul-soc">
-                    <li class="li-soc"><a class="a-soc" href="">
+                    <li class="li-soc"><a class="a-soc" href="#">
                         <svg class="svg-soc" width="16" height="16">
                           <use href="./images/icons.svg#instagram"></use>
                         </svg></a></li>
-                    <li class="li-soc"><a class="a-soc" href="">
+                    <li class="li-soc"><a class="a-soc" href="#">
                         <svg class="svg-soc" width="16" height="16">
                           <use href="./images/icons.svg#twitter"></use>
                         </svg></a></li>
-                    <li class="li-soc"><a class="a-soc" href="">
+                    <li class="li-soc"><a class="a-soc" href="#">
                         <svg class="svg-soc" width="16" height="16">
                           <use href="./images/icons.svg#facebook"></use>
                         </svg></a></li>
-                    <li class="li-soc"><a class="a-soc" href="">
+                    <li class="li-soc"><a class="a-soc" href="#">
                         <svg class="svg-soc" width="16" height="16">
                           <use href="./images/icons.svg#in"></use>
                         </svg></a></li>
@@ -303,28 +303,28 @@
           
             <ul class="icon-ul-footer">
               <li class="icon-li-footer">
-                <a href="" class="icon-a-footer">
+                <a href="#" class="icon-a-footer">
                   <svg width="24" height="24" class="icon-svg-footer">
                     <use href="./images/icons.svg#instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="icon-li-footer">
-                <a href="" class="icon-a-footer">
+                <a href="#" class="icon-a-footer">
                   <svg width="24" height="24" class="icon-svg-footer">
                     <use href="./images/icons.svg#twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="icon-li-footer">
-                <a href="" class="icon-a-footer">
+                <a href="#" class="icon-a-footer">
                   <svg width="24" height="24" class="icon-svg-footer">
                     <use href="./images/icons.svg#facebook"></use>
                   </svg>
                 </a>
               </li>              
               <li class="icon-li-footer">
-                <a href="" class="icon-a-footer">
+                <a href="#" class="icon-a-footer">
                   <svg width="24" height="24" class="icon-svg-footer">
                     <use href="./images/icons.svg#in"></use>
                   </svg>
