--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 
     <!--======= Footer =======-->
     <footer class="logo-footer-all">
-      <div class="container">
+      <div class="container page-footer-content">
         <div class="div-one-paragraf">
           <a class="logo-footer-a" href="./index.html">Web<span class="logo-style-studio-footer">Studio</span></a>
           <p class="footer-p">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
